k8s/overlays/testing/deployment.yaml
# Deployment configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant4.0-frontend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: registrycred
      containers:
      - name: frontend
        image: u4c2j2w9.c1.gra9.container-registry.ovh.net/plant4.0/frontend-prod:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
